adjustments to get builder AI working properly again